# RelHel

./: CMakeLists.txt  README.md  temp.cc
docs/: conditions.tex  formalism.tex
include/: ClebschGordan.h  ClebschGordanBox.h  Contraction.h  JLS.h  JLSIndices.h  JSS.h  LSAmplitude.h  MathUtils.h  Parity.h  QuantumNumbers.h  RationalNumber.h  TFhh.h  TFracNum.h  TJSS.h  TJwfTensor.h  TLSAmpl.h  TLSContrib.h  TLSNonRel.h  TSpinWaveFunction.h  WaveFunction.h  primeNumbers.h
programs/: CMakeLists.txt  CalcAmpl.cc  CalcAmpl.cxx  test.cxx  test_FracNum.cc  test_RationalNumber.cxx
src/: CMakeLists.txt  ClebschGordan.cxx  ClebschGordanBox.cc  Contraction.cxx  JSS.cxx  LSAmplitude.cxx  MathUtils.cc  MathUtils.cxx  RationalNumber.cxx  TFhh.cc  TFracNum.cc  TJSS.cc  TJwfTensor.cc  TLSAmpl.cc  TLSContrib.cc  TLSNonRel.cc  TSpinWaveFunction.cc  WaveFunction.cxx  generatePrimeNumberCache.cc  primeNumbers.cc
